# hotel-ddd

./: AGENTS.md  README.md  docker-compose.yml  sonar-project.properties
docs/: sonarcloud.md
services/customer-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
services/customer-service/internal/application/: errors.py
services/customer-service/internal/application/commands/: authenticate_customer.py  change_customer_status.py  register_customer.py  update_customer_info.py
services/customer-service/internal/application/dto/: customer.py
services/customer-service/internal/application/usecases/: _shared.py  authenticate_customer.py  change_customer_status.py  get_customer_by_id.py  list_customers.py  register_customer.py  update_customer_info.py  validate_customer_for_reservation.py
services/customer-service/internal/domain/entities/: customer.py
services/customer-service/internal/domain/events/: customer_events.py
services/customer-service/internal/domain/repositories/: customer_repository.py
services/customer-service/internal/domain/services/: event_publisher.py  token_generator.py
services/customer-service/internal/domain/valueobjects/: customer_role.py  customer_status.py  email.py
services/customer-service/internal/infrastructure/auth/: bcrypt_password_hasher.py  jwt_token_generator.py
services/customer-service/internal/infrastructure/config/: settings.py
services/customer-service/scripts/: validate.sh
services/customer-service/test/integration/: test_customer_repository_and_api.py  test_rabbitmq_event_publisher.py
(+18 files in other folders)
